2012-02-01  Vanessa Gil  <vanessa.gil@artica.es>

	* operation/events/events_list.php: Show event id in view events.

2012-02-01 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* general/shortcut_bar.php: Fixed realtime update of alerts counter.

2012-02-01  Vanessa Gil  <vanessa.gil@artica.es>

	* pandoradb.sql
	 pandoradb.postgreSQL.sql
	 pandoradb.oracle.sql
	 extras/pandoradb_migrate_4.0.x_to_4.1.mysql.sql
	 extras/pandoradb_migrate_4.0.x_to_4.1.oracle.sql
	 extras/pandoradb_migrate_4.0.x_to_4.1.postgreSQL.sql: Added
	 fields in tevento.	

2012-02-01 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/incidents/incident.php: removed trace.
	
	* operation/agentes/alerts_status.php
	 index.php
	 operation/users/user_edit.php
	 general/shortcut_bar.php: Added shortcut bar.

	* pandoradb.sql
	 pandoradb.postgreSQL.sql
	 pandoradb.oracle.sql
	 extras/pandoradb_migrate_4.0.x_to_4.1.mysql.sql
	 extras/pandoradb_migrate_4.0.x_to_4.1.oracle.sql
	 extras/pandoradb_migrate_4.0.x_to_4.1.postgreSQL.sql: Added shorcut
	 field in tusuario table.	 
	 
2012-01-31 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_reporting: Fixed bug when the module has only 
	one value.

2012-01-31  Vanessa Gil  <vanessa.gil@artica.es>

	* include/functions_reporting: Modified SLA reports when
	downtime planned.

2012-01-30 Juan Manuel Ramon <juanmanuel.ramon@artica.es>	

	* images/skin/skin_default/include/styles/pandora.css: Added grid 
	feature in visual console for default skin.

2012-01-30 Juan Manuel Ramon <juanmanuel.ramon@artica.es>	

	* images/grid.png 
	 images/grid.disabled.png 
	 include/styles/pandora.css: Added these images for new grid feature
	 in visual console. 

2012-01-30 Juan Manuel Ramon <juanmanuel.ramon@artica.es>	
	
	* godmode/agentes/module_manager_editor_prediction.php: Added module
	postprocess in prediction module.
	
	Fixes: #3480054

2012-01-30 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
